--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
 		"publint": "^0.2.3",
 		"svelte": "^4.2.1",
 		"svelte-check": "^3.5.2",
+		"three-instanced-uniforms-mesh": "^0.49.0",
+		"troika-three-utils": "^0.49.0",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
 		"vite": "^4.4.11"
